syntax = "proto3";

package generic.events.v1;

import "generic/events/v1/notifications.proto";
import "generic/events/v1/system.proto";
import "generic/events/v1/todo.proto";

option go_package = "github.com/jgkawell/galactus/api/gen/go/generic/events/v1";

// map of all aggregate types, add to it as more aggregates are added to the application
enum AggregateType {
    AGGREGATE_TYPE_INVALID_UNSPECIFIED = 0;
    AGGREGATE_TYPE_SYSTEM = 1;
    AGGREGATE_TYPE_NOTIFICATION = 2;
    AGGREGATE_TYPE_TODO = 3;
}

// map of all event types, add to it as more event types are added to the application
message EventType {
    oneof code {
        generic.events.v1.SystemEventCode system_code = 1;
        generic.events.v1.NotificationEventCode notification_code = 2;
        generic.events.v1.TodoEventCode todo_event_code = 3;
    }
}
